syntax = "proto3";

package proto.todotask.v1;

import "google/api/annotations.proto";

option go_package = ".todotask";

service TodoTaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {
    option (google.api.http) = {
      post: "/v1/todotask/createtask"
      body: "*"
    };
  }
  rpc TasksList(TasksListRequest) returns (TasksListResponse) {
    option (google.api.http) = {get: "/v1/todotask/taskslist"};
  }
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {
    option (google.api.http) = {delete: "/v1/todotask/deletetask/{id}"};
  }
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {
    option (google.api.http) = {
      put: "/v1/todotask/updatetask"
      body: "*"
    };
  }
}
message TodoTask {
  uint32 id = 1;
  string title = 2;
  string description = 3;
  uint64 date = 4;
  bool is_completed = 5;
}
message CreateTaskRequest {
  TodoTask task = 1;
}
message CreateTaskResponse {
  uint32 task_id = 1;
}

message TasksListRequest {
  string title = 1;
  bool is_done = 2;
  bool is_undone = 3;
}
message TasksListResponse {
  repeated TodoTask tasks = 2;
}

message DeleteTaskRequest {
  uint32 id = 1;
}

message DeleteTaskResponse {
  ResponseCode code = 1;
}

message UpdateTaskRequest {
  TodoTask task = 1;
}
message UpdateTaskResponse {
  ResponseCode code = 1;
}

enum ResponseCode {
  RESPONSE_CODE_UNSPECIFIED = 0;
  RESPONSE_CODE_SUCCESS = 1;
  RESPONSE_CODE_NOT_FOUND = 2;
}
